[project]
name = "sb-tokenizer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "tanhongming.1", email = "tanhongming.1@jd.com" }
]
requires-python = ">=3.12"
dependencies = []

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "sb_tokenizer._rust"
